--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@
 body {
   cursor: url('assets/cursor-assets/custom_pointer_default.svg'), default;
   background-color: var(--color-primary); 
+  overflow-anchor: none;
 }
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
